<resources>
    <string name="app_name">COMPPRESS</string>
    <string name="label_reader">Reader View</string>
    <string name="base_url">https://prod.comppress.org/</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="filter">Filter content</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="open">\"Open\"</string>
    <string name="close">\"Close\"</string>
    <string name="login_logo">Login Logo</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="source">Source</string>
    <string name="title">Title - Lorem ipsum dolor sit amet - Title</string>
    <string name="time">Today</string>
    <string name="rating_null">New</string>
    <string name="rating_count">999</string>
    <string name="article_image">Article image</string>
    <string name="settings">Settings</string>
    <string name="language">Switch feed language</string>
    <string name="website">Website</string>
    <string name="join">Become a member</string>
    <string name="publishers">Publisher Information</string>
    <string name="github">Github</string>
    <string name="licence">Licence</string>
    <string name="support_chat">Support chat</string>
    <string name="in_progress">(In planning)</string>
    <string name="rating">Rating</string>
    <string name="rating_successful">Rating successful</string>
    <string name="rating_error">Please rate all criteria</string>
    <string name="criterion1">Sorgfältige Quellenarbeit (EN)</string>
    <string name="criterion2">Plausible Argumentation (EN)</string>
    <string name="criterion3">Ausgewogene Berichterstattung (EN)</string>
    <string name="criterion1_description">- Sind die Aussagen des Textes belegt?\n- Werden unterschiedliche Quellen genannt? (EN)</string>
    <string name="criterion2_description">- Sind die Argumente belegt?\n- Werden diese reflektiert?\n- Bedient sich der Autor einer logischen\n Argumentation? (EN)</string>
    <string name="criterion3_description">- Werden unterschiedliche Argumentations-\n standpunkte wiedergegeben?\n- Wird fair und ausgewogen berichtet? (EN)</string>
</resources>