<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/login_drawer"
        android:icon="@drawable/login_black_24dp"
        android:title="@string/login"/>
    <item
        android:id="@+id/settings_drawer"
        android:icon="@drawable/settings_black_24dp"
        android:title="@string/settings" />
    <item
        android:id="@+id/download_drawer"
        android:icon="@drawable/get_app_black_24dp"
        android:title="@string/update"/>
    <group android:id="@+id/group1">
        <item
            android:id="@+id/homepage_drawer"
            android:icon="@drawable/home_24dp"
            android:title="@string/website"/>
        <item
            android:id="@+id/join_drawer"
            android:icon="@drawable/group_add_24dp"
            android:title="@string/join"/>
        <item android:id="@+id/donate_drawer"
            android:icon="@drawable/heart_24px"
            android:title="@string/donate"/>
        <item
            android:id="@+id/github_drawer"
            android:icon="@drawable/github_24dp"
            android:title="@string/github"/>
        <item
            android:id="@+id/supportchat_drawer"
            android:icon="@drawable/chat_24dp"
            android:title="@string/support_chat"/>
    </group>
</menu>