<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_landingpage"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="4dp"
        android:elevation="5dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView

                    android:id="@+id/image_view_content"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="#C3C3C3"
                    android:scaleType="centerCrop"
                    android:tintMode="src_atop"
                    app:tint="#32000000"
                    android:contentDescription="@string/article_image" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/image_view_content"
                    android:layout_marginEnd="2dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|end"
                        android:shadowColor="#000000"
                        android:shadowRadius="2"
                        android:text="@string/rating_null"
                        android:textAlignment="textEnd"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_view_count_ratings"
                        android:layout_width="wrap_content"
                        android:layout_gravity="end|end"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:text="@string/rating_count"
                        android:textColor="#FFFFFF"
                        android:shadowColor="#000000"
                        android:shadowRadius="2"
                        android:textSize="12sp" />
                </LinearLayout>


                <TextView
                    android:id="@+id/text_view_missing_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:text="@string/source"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:maxLines="1"
                    android:text="@string/source"
                    android:textAppearance="?android:textAppearanceSmall" />

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:maxLines="4"
                    android:minLines="4"
                    android:text="@string/title"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_date"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/time"
                    android:textAppearance="?android:textAppearanceSmall" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</FrameLayout>